# sol-contracts

./: .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
examples/spl_token_predicate/: Cargo.toml  README.md  package.json
examples/spl_token_predicate/src/: errors.rs  events.rs  lib.rs  state.rs
examples/spl_token_predicate/src/instructions/: initialize.rs  mod.rs  protected_transfer.rs  protected_transfer_from.rs  update_policy.rs
examples/spl_token_predicate/tests/: spl-token-predicate.test.ts
migrations/: deploy.ts
programs/counter/: Cargo.toml
programs/counter/src/: errors.rs  events.rs  lib.rs  state.rs
programs/counter/src/instructions/: get_value.rs  increment.rs  initialize.rs  mod.rs  transfer_authority.rs  update.rs
programs/predicate_registry/: Cargo.toml
programs/predicate_registry/src/: errors.rs  events.rs  lib.rs  state.rs
programs/predicate_registry/src/instructions/: cleanup_expired_uuid.rs  deregister_attester.rs  deregister_attestor.rs  initialize.rs  mod.rs  register_attester.rs  register_attestor.rs  set_policy.rs  set_policy_id.rs  transfer_authority.rs  update_policy.rs  update_policy_id.rs  validate_attestation.rs
scripts/: README.md  deploy-devnet.sh  deploy-mainnet.sh  fresh-counter.js  generate-test-keys.ts  get-policy.ts  increment-counter.ts  increment-existing.js  increment.js  initialize-counter.ts  initialize-predicate-registry.ts  register-attester.ts  register-attestor.ts  set-customer-policy.ts  simple-increment.js
tests/: README.md  attester-management.test.ts  attestor-management.test.ts  authority-transfer.test.ts  counter.ts  initialization.test.ts  integration.test.ts  policy-management.test.ts  predicate-registry.test.ts  replay-protection.test.ts  validate-attestation.test.ts
(+25 files in other folders)
