[package]
name = "counter"
version = "0.1.0"
description = "Example counter program integrated with predicate-registry for validation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.31.1"
predicate_registry = { path = "../predicate_registry", features = ["cpi"] }
hex = "0.4"