[package]
name = "predicate_registry"
version = "0.1.0"
description = "Solana program for registering attestors, managing client policies, and validating attestations coming from Predicate"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "predicate_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.31.1"
hex = "0.4"